tests/ui/cir_deps_itself.fail.stderr
error: circular dependency detected: x -> x
 --> tests/ui/cir_deps_itself.fail.rs:5:5
  |
5 |     #[depends_on(x)]
  |     ^^^^^^^^^^^^^^^^
