tests/ui/cir_deps_itself.fail.rs
use layered_crate::layers;

#[layers]
mod src {
    #[depends_on(x)]
    pub extern crate x;
}

fn main() {
    x::do_something();
}
